--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --config=rn-cli.config.js --reset-cache",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-native-community/netinfo": "^7.1.7",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "amazon-cognito-identity-js": "^5.2.4",
+    "aws-amplify": "^4.3.12",
+    "aws-amplify-react-native": "^6.0.2",
     "react": "17.0.2",
     "react-hook-form": "^7.22.5",
     "react-native": "0.66.3",
